--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 </head>
 <body>
+  <header>
+    <span class="span-1">Tic</span>
+    <span class="span-2">Tac</span>
+    <span class="span-3">Toe</span>
+    <hr>
+  </header>
       <div class="tic-tac-toe">
         <input class="player-1 left first-column top first-row first-diagonal turn-1" id="block1-1-1" type="radio"/>
         <label class="turn-1" for="block1-1-1"></label>
@@ -176,7 +182,15 @@
         <div class="end">
         <h3></h3><a href="">Restart</a>
         </div>
+
+        
+
       </div>
+      <footer>
+        <div class="footer-c">
+        Created by <a href="http://bit.ly/shivanshukarn" target="_blank">Shivanshu Karn</a>
+        </div>
+      </footer>
 
 </body>
 </html>
