--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
    <link rel="stylesheet" href="style.css">
 
+   <link rel="icon" href="favicon.jpg" type="image/jpg">
+
 </head>
 <body>
   <header>
